# fastpy

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-1.md  README.md  fastpy_main.py  main.py  pyproject.toml
.github/workflows/: ci.yml  main.yml
core/: __init__.py  emitter.py  intrinsics.py  parser.py  toolchain.py  type_system.py
docs/: ARCHITECTURE.md  DECISIONS.md  ENGINE_ARCHITECTURE.md  PROJECT_CONTEXT.md  ROADMAP.md  SESSION_LOG.md
examples/: simple_engine.py
tests/: conftest.py  test_emitter.py  test_intrinsics.py  test_parser.py  test_type_system.py
