[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fastpy"
version = "0.1.0.dev0"
description = "Python-to-C++ transpiler for chess engines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fastpy = "fastpy_main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.setuptools]
py-modules = ["fastpy_main"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
